// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`playersearch should work with multiple keywords 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "c:limit": "25",
    "name.first_lower": [
      "*bar",
      "*foo",
    ],
  },
}
`;

exports[`playersearch should work with one keyword 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "c:limit": "25",
    "name.first_lower": "*test",
  },
}
`;
